feat: implementando clean arch